style.css
/* ... */
@keyframes vibrate-1 {
    0% {
        -webkit-transform: translate(0);
        transform: translate(0);
    }
    20% {
        -webkit-transform: translate(-2px, 2px);
        transform: translate(-2px, 2px);
    }
    40% {
        -webkit-transform: translate(-2px, -2px);
        transform: translate(-2px, -2px);
    }
    60% {
        -webkit-transform: translate(2px, 2px);
        transform: translate(2px, 2px);
    }
    80% {
        -webkit-transform: translate(2px, -2px);
        transform: translate(2px, -2px);
    }
    100% {
        -webkit-transform: translate(0);
        transform: translate(0);
    }
}

main img {
    align-self: flex-end;
    z-index: 0;
    position: absolute;
    top: 0;
}

.swiper-container {
    display: grid;
    width: 100%;
    height: 100%;
}

.swiper-slide {
    height: 50vh;
    text-align: left;
    font-size: 18px;
    /*background: rgb(190, 179, 179);*/
    display: -webkit-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    flex-direction: column;
    position: relative;
    /*-webkit-box-pack: center;
        -ms-flex-pack: center;
        -webkit-justify-content: center;
        justify-content: center;
        -webkit-box-align: center;
        -ms-flex-align: center;
        -webkit-align-items: center;
        align-items: center;*/
}

 :root {
    --swiper-theme-color: rgb(253, 252, 252);
    --swiper-navigation-size: 20px;
}

.container {
    display: flex;
    margin-top: 8rem;
}

h1 {
    writing-mode: vertical-rl;
}

.swiper-wrapper {
    display: flex;
    height: 70vh;
    /*align-items: center;
        height:100%;*/
}

.down {
    align-self: flex-end;
}

p {
    font-size: 1.5rem;
    font-weight: 100;
    z-index: 3;
    margin-top: 30%;
}

.left,
.right,
.mobile,
.ipadContent {
    align-self: center;
    color: #5C5A90;
    letter-spacing: 4px;
    font-size: 2.5rem;
    -webkit-text-fill-color: transparent;
    -webkit-text-stroke-width: 0.9px;
    align-self: center;
}

h3 {
    font-family: "Gilroy";
    font-weight: 800;
    z-index: 3;
}

.swiper-pagination {
    color: #c1bff5;
}

.mobile {
    display: none;
}

.ipad {
    display: none;
}

@media(max-width: 800px) {
    .ipad {
        display: block;
    }
    100% {
        -webkit-transform: translate(0);
        transform: translate(0);
    }
}

main img {
    align-self: flex-end;
    z-index: 0;
    position: absolute;
    top: 0;
}

.swiper-container {
    display: grid;
    width: 100%;
    height: 100%;
}

.swiper-slide {
    height: 50vh;
    text-align: left;
    font-size: 18px;
    /*background: rgb(190, 179, 179);*/
    display: -webkit-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    flex-direction: column;
    position: relative;
    /*-webkit-box-pack: center;
    -ms-flex-pack: center;
    -webkit-justify-content: center;
    justify-content: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    -webkit-align-items: center;
    align-items: center;*/
}

 :root {
    --swiper-theme-color: rgb(253, 252, 252);
    --swiper-navigation-size: 20px;
}

.container {
    display: flex;
    margin-top: 8rem;
}

h1 {
    writing-mode: vertical-rl;
}

.swiper-wrapper {
    display: flex;
    height: 70vh;
    /*align-items: center;
    height:100%;*/
}

.down {
    align-self: flex-end;
}

p {
    font-size: 1.5rem;
    font-weight: 100;
    z-index: 3;
    margin-top: 30%;
}

.left,
.right,
.mobile,
.ipadContent {
    align-self: center;
    color: #5C5A90;
    letter-spacing: 4px;
    font-size: 2.5rem;
    -webkit-text-fill-color: transparent;
    -webkit-text-stroke-width: 0.9px;
    align-self: center;
}

h3 {
    font-family: "Gilroy";
    font-weight: 800;
    z-index: 3;
}

@media screen and (max-width: 767px) {
    body {
        background-image: url(/assets/icons/bg-sm.png);
        background-size: 100% 100%;
    }
    .header-container {
        display: none;
    }
    .social-container {
        display: none;
    }
}

.swiper-pagination {
    color: #c1bff5;
}

.mobile {
    display: none;
}

.ipad {
    display: none;
}

@media screen and (min-width: 768px) {
    .logo {
        display: none;
    }
}

@media screen and (max-width: 767px) {
    .container-fluid {
        padding: 2.4rem 0 9.2rem 0;
        display: block;
        box-sizing: border-box;
    }
    .info-container .col:first-child {
        padding-left: 15px;
    }
    footer a,
    h6,
    footer p {
        font-size: 1.8rem;
    }
    footer a {
        line-height: 2.8rem;
    }
    footer {
        padding: 2em;
    }
    form {
        margin-right: 1em;
    }
    .faq,
    .about,
    .news {
        padding-top: inherit;
    }
}

@media(max-width: 800px) {
    .ipad {
        display: block;
    }
    .right {
        display: none;
    }
}
/* ... */

